--- a/index.html
+++ b/index.html
@@ -3,66 +3,149 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre o PeçaAq</title>
+  <title>PeçaAq - Sobre</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Anton&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- ===== CABEÇALHO ===== -->
-  <header class="header">
+  <!-- ===== HEADER ===== -->
+  <header class="navbar">
     <div class="logo">
       <img src="img/logo.jpg" alt="Logo PeçaAq">
       <h1>PeçaAq</h1>
     </div>
+    <nav>
+      <ul>
+        <a href="#">HOME</a>
+        <a href="#">PRODUTOS</a>
+        <a href="#">EMPRESAS</a>
+        <a href="#">CONTATO</a>
+      </ul>
+    </nav>
   </header>
 
-  <!-- ===== SEÇÃO SOBRE ===== -->
+  <!-- ===== SOBRE ===== -->
   <section class="sobre-clean">
     <div class="container">
       <div class="texto">
-        <h2>Quem Somos</h2>
-        <p>
-          O <strong>PeçaAq</strong> nasceu com o objetivo de transformar a forma como oficinas, revendedores e clientes se conectam no mercado automotivo.  
-          Somos uma plataforma que combina tecnologia, praticidade e confiança para facilitar a compra e venda de peças automotivas.
-        </p>
-        <p>
-          Nossa equipe acredita que inovação é o combustível do futuro. Trabalhamos todos os dias para entregar soluções simples, eficientes e seguras, que ajudam nossos parceiros a crescer de forma sustentável.
-        </p>
+        <div class="sobre-box">
+          <h2>Sobre nós</h2>
+          
+          <p>
+            Fundado com o propósito de transformar o mercado automotivo, o <strong>PeçaAq</strong> nasceu para simplificar a negociação de peças automotivas.  
+            Nossa plataforma conecta fornecedores e compradores com transparência, agilidade e tecnologia, promovendo negócios mais eficientes e modernos.
+          </p>
+          <p>
+            Nosso objetivo é tornar o processo de compra e venda de peças automotivas mais simples e confiável, oferecendo uma experiência fluida, intuitiva e segura para todos os usuários.
+          </p>
+        </div>
       </div>
       <div class="imagem">
-        <img src="img/equipe1.jpg" alt="Equipe PeçaAq">
+        <img src="img/porshe.jpg" alt="Equipe PeçaAq">
       </div>
     </div>
   </section>
 
-  <!-- ===== SEÇÃO MISSÃO VISÃO VALORES ===== -->
-  <section class="missao-valores-clean">
-    <div class="container-cards">
-      <div class="card">
-        <h3>Missão</h3>
-        <p>Oferecer soluções digitais que aproximem o setor automotivo e simplifiquem a jornada de compra e venda de autopeças.</p>
+  <!-- ===== EQUIPE ===== -->
+  <section class="equipe">
+    <h2>Quem somos</h2>
+    <p class="descricao">
+      Seis estudantes de Tecnologia da Informação que transformaram uma ideia acadêmica em um projeto real e inovador no mercado automotivo.
+    </p>
+
+    <div class="membros">
+      <div class="membro">
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="img/joaquim.jpeg" alt="Joaquim Barbosa">
+            <h3>Joaquim Barbosa</h3>
+            <p>Dev</p>
+          </div>
+          <div class="card-back">
+            <h3>Joaquim Barbosa</h3>
+            <p>Responsável pelo design e identidade visual do PeçaAQ. Criou o README, o Branch e participou do desenvolvimento das telas.</p>
+          </div>
+        </div>
       </div>
-      <div class="card">
-        <h3>Visão</h3>
-        <p>Ser referência nacional em tecnologia automotiva, com foco em inovação e excelência na experiência do cliente.</p>
+
+      <div class="membro">
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="img/gabriel-sandes.jpeg" alt="Gabriel Sandes">
+            <h3>Gabriel Sandes</h3>
+            <p>POO</p>
+          </div>
+          <div class="card-back">
+            <h3>Gabriel Sandes</h3>
+            <p>Líder técnico e arquiteto do sistema. Atua no backend e garante o desempenho e organização do código.</p>
+          </div>
+        </div>
       </div>
-      <div class="card">
-        <h3>Valores</h3>
-        <ul>
-          <li>Transparência e ética</li>
-          <li>Comprometimento com o cliente</li>
-          <li>Inovação contínua</li>
-          <li>Qualidade em cada entrega</li>
-        </ul>
+
+      <div class="membro">
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="img/gabriel-bandasz.jpeg" alt="Gabriel Bandasz">
+            <h3>Gabriel Bandasz</h3>
+            <p>Scrum Master</p>
+          </div>
+          <div class="card-back">
+            <h3>Gabriel Bandasz</h3>
+            <p>Scrum Master, responsável pela organização, ritmo e colaboração do time durante o desenvolvimento.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="membro">
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="img/pedro flores.jpeg" alt="Pedro Flores">
+            <h3>Pedro Flores</h3>
+            <p>Dev</p>
+          </div>
+          <div class="card-back">
+            <h3>Pedro Flores</h3>
+            <p>Especialista em APIs e banco de dados, responsável pela lógica do sistema e comunicação entre o front e o back.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="membro">
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="img/lucas-matheus.jpg" alt="Lucas Matheus">
+            <h3>Lucas Matheus</h3>
+            <p>Dev</p>
+          </div>
+          <div class="card-back">
+            <h3>Lucas Matheus</h3>
+            <p>Cuida da experiência visual e testes de estabilidade, garantindo performance e fluidez ao site.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="membro">
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="img/leonardo.jpeg" alt="Leonardo Schimmit">
+            <h3>Leonardo Schimmit</h3>
+            <p>Dev</p>
+          </div>
+          <div class="card-back">
+            <h3>Leonardo Schimmit</h3>
+            <p>Responsável pela estilização e padronização visual do projeto PeçaAq.</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- ===== RODAPÉ ===== -->
   <footer class="footer">
     <p>© 2025 PeçaAq — Todos os direitos reservados.</p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
